<resources>
    <string name="app_name">HMAndroid</string>
    <string name="day01_title1">HelloWorld</string>
    <string name="day01_title2">PhoneDialer</string>
    <string name="day01_title3">SmsSender</string>
    <string name="day01_title4">ClickEvent</string>
    <string name="day01_values1">HelloWorld</string>
    <string name="day01_values2">请输入电话号码</string>
    <string name="day01_values3">拨打电话</string>
    <string name="day01_values4">请输入短信内容</string>
    <string name="day01_values5">发送</string>
    <string name="day01_values6">第一种点击事件的写法</string>
    <string name="day01_values7">第二种点击事件的写法</string>
    <string name="day01_values8">第三种点击事件的写法</string>
    <string name="day01_values9">第四种点击事件的写法</string>
    <string name="day01">快速入门</string>
    <string name="day02">数据存储和界面展示上</string>
    <string name="day03">数据存储和界面展示下</string>
    <string name="day04">网络编程上</string>
    <string name="day05">网络编程下</string>
    <string name="day06">界面跳转和数据传递</string>
    <string name="day07">广播和服务上</string>
    <string name="day08">广播和服务下</string>
    <string name="day09">多媒体编程</string>
    <string name="day10">内容提供者</string>
    <string name="day11">新特性和知识点回顾</string>
    <string name="day12">总结</string>
    <string name="day02_title1">CommonLayout</string>
    <string name="day02_title2">Logcat</string>
    <string name="day02_title3">SDStateAndSize</string>
    <string name="day02_title4">StorageOption</string>
    <string name="day02_title5">OperatorXML</string>
    <string name="day02_title6">Preference</string>
    <string name="day02_values1">LinearLayoutDemoOne</string>
    <string name="day02_values2">LinearLayoutDemoTwo</string>
    <string name="day02_values3">RelativeLayoutDemoOne</string>
    <string name="day02_values4">RelativeLayoutDemoTwo</string>
    <string name="day02_values5">FrameLayoutDemo</string>
    <string name="day02_values6">TableLayoutDemo</string>
    <string name="day02_values7">AbsolueLayoutDemo</string>
    <string name="day02_values8">0.0</string>
    <string name="day02_values9">MC</string>
    <string name="day02_values10">M+</string>
    <string name="day02_values11">M-</string>
    <string name="day02_values12">MR</string>
    <string name="day02_values13">C</string>
    <string name="day02_values14">+/-</string>
    <string name="day02_values15">/</string>
    <string name="day02_values16">*</string>
    <string name="day02_values17">7</string>
    <string name="day02_values18">8</string>
    <string name="day02_values19">9</string>
    <string name="day02_values20">-</string>
    <string name="day02_values21">4</string>
    <string name="day02_values22">5</string>
    <string name="day02_values23">6</string>
    <string name="day02_values24">+</string>
    <string name="day02_values25">1</string>
    <string name="day02_values26">2</string>
    <string name="day02_values27">3</string>
    <string name="day02_values28">0</string>
    <string name="day02_values29">.</string>
    <string name="day02_values30">=</string>
    <string name="day02_values31">Center</string>
    <string name="day02_values32">above</string>
    <string name="day02_values33">below</string>
    <string name="day02_values34">left</string>
    <string name="day02_values35">leftabove</string>
    <string name="day02_values36">leftbelow</string>
    <string name="day02_values37">right</string>
    <string name="day02_values38">rightabove</string>
    <string name="day02_values39">rightbelow</string>
    <string name="day02_values40">姓名</string>
    <string name="day02_values41">性别</string>
    <string name="day02_values42">住址</string>
    <string name="day02_values43">张三</string>
    <string name="day02_values44">男</string>
    <string name="day02_values45">北京</string>
    <string name="day02_values46">李四</string>
    <string name="day02_values47">男</string>
    <string name="day02_values48">北京</string>
    <string name="day02_values49">王五</string>
    <string name="day02_values50">男</string>
    <string name="day02_values51">北京</string>
    <string name="day02_values52">绝对布局</string>
    <string name="day02_values53">Log的日志等级:\n 1.Verbose \n 2.Debug \n 3.Info \n 4.Warn \n 5.Error</string>
    <string name="day02_values54">内部存储</string>
    <string name="day02_values55">外部存储</string>
    <string name="day02_values56">SharedPreferences</string>
    <string name="day02_values57">username</string>
    <string name="day02_values58">password</string>
    <string name="day02_values59">记住账号</string>
    <string name="day02_values60">登录</string>
    <string name="day02_values61">Write</string>
    <string name="day02_values62">Read</string>
    <string name="day03_title1">Junit</string>
    <string name="day03_title2">Sqlite</string>
    <string name="day03_title3">ListView</string>
    <string name="day03_title4">Dialog</string>
    <string name="day03_values1">Junit的使用</string>
    <string name="day03_values2">使用Sqlite数据库</string>
    <string name="day03_values3">ArrayAdapter</string>
    <string name="day03_values4">SimpleAdapter</string>
    <string name="day03_values5">CustomAdapter</string>
    <string name="day03_values6">内容</string>
    <string name="day03_values7">对话框</string>
    <string name="day03_values8">单选对话框</string>
    <string name="day03_values9">多选对话框</string>
    <string name="day04_title1">ImageViewer</string>
    <string name="day04_title2">HTMLViewer</string>
    <string name="day04_title3">SimpleNewsClient</string>
    <string name="day04_title4">GETAndPOST</string>
    <string name="day04_values1">MyImageViewer</string>
    <string name="day04_values2">SmartImageView</string>
    <string name="day04_values3">Picasso</string>
    <string name="day04_values4">Glide</string>
    <string name="day04_values5">Fresco</string>
    <string name="day04_values6">http://img.mmjpg.com/2017/982/39.jpg</string>
    <string name="day04_values7">查看</string>
    <string name="day04_values8">https://www.baidu.com/</string>
    <string name="day04_values9">武汉</string>
    <string name="day04_values10">GET</string>
    <string name="day04_values11">POST</string>
    <string name="day05_title1">HTTPClientAndAsyncHTTPClinet</string>
    <string name="day05_title2">Download</string>
    <string name="day05_values1">HttpClient</string>
    <string name="day05_values2">AsyncHttpClient</string>
    <string name="day05_values3">MutipleThreadDownload</string>
    <string name="day05_values4">Downloader</string>
    <string name="day05_values5">OpenDownloader</string>
    <string name="day05_values6">http://gdown.baidu.com/data/wisegame/0852f6d39ee2e213/QQ_676.apk</string>
    <string name="day05_values7">下载</string>
    <string name="day06_title1">SecondActivity</string>
    <string name="day06_title2">ActivityJump</string>
    <string name="day06_title3">ActivityLifeCycle</string>
    <string name="day06_title4">ActivityLunchMode</string>
    <string name="day06_title5">ScreenOrientation</string>
    <string name="day06_title6">StartActivityForResult</string>
    <string name="day06_values1">SecondActivity</string>
    <string name="day06_values2">跳转到打电话的Activity</string>
    <string name="day06_values3">显示跳转SecondActivity</string>
    <string name="day06_values4">隐式跳转到SecondActivity</string>
    <string name="day06_values5">显示跳转到拨号器</string>
    <string name="day06_values6">隐式跳转到拨号器</string>
    <string name="day06_values7">显示跳转到浏览器</string>
    <string name="day06_values8">隐式跳转到浏览器</string>
    <string name="day06_values9">ActivityLifeCycle</string>
    <string name="day06_values10">Standard</string>
    <string name="day06_values11">SingleTop</string>
    <string name="day06_values12">SingleTask</string>
    <string name="day06_values13">SingleInstance</string>
    <string name="day07_title1">IPDialer</string>
    <string name="day07_title2">SmsIntercepter</string>
    <string name="day07_title3">SDBroadcast</string>
    <string name="day07_title4">BootComplete</string>
    <string name="day07_title5">PackcageBroadcast</string>
    <string name="day07_title6">CustomBroadcast</string>
    <string name="day07_title7">OrderBroadcast</string>
    <string name="day07_title8">PhoneRecoder</string>
    <string name="day08_title1">Service</string>
    <string name="day08_title2">FindLeader</string>
    <string name="day08_title3">MusicPlayer</string>
    <string name="day08_title4">CodeRegistBroadcast</string>
    <string name="day08_title5">StartRemoteService</string>
    <string name="day08_title6">PayDemo</string>
    <string name="day08_title7">StyleAndTheme</string>
    <string name="day08_title8">I18N</string>
    <string name="day09_title1">LoadBigImage</string>
    <string name="day09_title2">CopyImage</string>
    <string name="day09_title3">ImageSpecialEffects</string>
    <string name="day09_title4">DrawingBorad</string>
    <string name="day09_title5">HeartBeat</string>
    <string name="day09_title6">MusicPlayer</string>
    <string name="day09_title7">VideoPlayer</string>
    <string name="day09_title8">Camera</string>
    <string name="day10_title1">ContentProviderAndContentObserver</string>
    <string name="day10_title2">SmsContentProvider</string>
    <string name="day10_title3">ContactsContentProvider</string>
    <string name="day11_title1">Fragment</string>
    <string name="day11_title2">Animator</string>
    <string name="day12_title">summary</string>
    <string name="day06_vlaues14">StartActivityForResult</string>
    <string name="day06_values15">返回结果</string>
</resources>