<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zhaoliang.com.hmandroid.activity.day02.commonlayout.CommonLayoutActivity">

    <Button
        android:id="@+id/layout_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/day02_values1" />

    <Button
        android:id="@+id/layout_demo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/day02_values2" />

    <Button
        android:id="@+id/layout_demo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/day02_values3" />

    <Button
        android:id="@+id/layout_demo4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/day02_values4" />

    <Button
        android:id="@+id/layout_demo5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/day02_values5" />

    <Button
        android:id="@+id/layout_demo6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/day02_values6" />

    <Button
        android:id="@+id/layout_demo7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/day02_values7" />

</LinearLayout>
