<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zhaoliang.com.hmandroid.activity.day06.activitylunchmode.ActivityLunchModeActivity">

    <Button
        android:id="@+id/btn_lunchmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lunchmode"
        android:text="@string/day06_values10" />

    <Button
        android:id="@+id/btn_lunchmode2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lunchmode"
        android:text="@string/day06_values11" />

    <Button
        android:id="@+id/btn_lunchmode3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lunchmode"
        android:text="@string/day06_values12" />

    <Button
        android:id="@+id/btn_lunchmode4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lunchmode"
        android:text="@string/day06_values13" />
</LinearLayout>
